--- a/api.html
+++ b/api.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>apis</title>
 <style>
-    h1,h2,h3,h4,h5{font-weight: normal; margin:0px}
+    h1,h2,h3,h4,h5{font-weight: normal; margin:2vh 0px 0px; border-top: 1.5px solid grey;}
     h1::before{
         content: "# ";
     }
@@ -46,7 +46,7 @@
 </style>
 </head>
 <body>
-<h1 >HTML APIs</h1>
+<h1 style="border-top: 0px solid grey;margin:0px">HTML APIs</h1>
 <h2 >inputs: <code>&lt;input type="<span style="color: red;">$type</span>"></code></h2>
 <small style="color: red;">
 button: <input type="button"><br>
@@ -71,7 +71,7 @@ time: <input type="time"><br>
 url: <input type="url"><br>
 week: <input type="week"><br>
 </small>
-<hr>
+
 <h3 >file inputs:</h3>
 single file:
 <input type="file"/>
@@ -82,7 +82,7 @@ single file:
 </pre>
 </div>
 
-<hr>
+
 specified type (image):
 <input type="file" accept="image/png, image/jpeg" />
 
@@ -92,7 +92,7 @@ specified type (image):
 </pre>
 </div>
 
-<hr>
+
 
 multiple files:
 <input type="file" multiple/>
@@ -102,7 +102,7 @@ multiple files:
 &lt;input type="file" multiple/>
 </pre>
 </div>
-<hr>
+
 files with directory:
 <input type="file" multiple directory webkitdirectory mozdirectory odirectory/>
 
@@ -112,7 +112,7 @@ files with directory:
 </pre>
 </div>
 
-<hr>
+
 change prompt (js):
 <button onclick="document.getElementById('getFile').click()">Your text here</button>
 <input type='file' id="getFile" style="display:none">
@@ -124,7 +124,7 @@ change prompt (js):
 </pre>
 </div>
 
-<hr>
+
 
 <h2>Web share API</h2>
 <button onclick="javascript:navigator.share({title:'site name',text:'desc',url:'https://example.com'})">share</button>
@@ -133,7 +133,7 @@ change prompt (js):
 &lt;button onclick="javascript:navigator.share({title:'site name',text:'desc',url:'https://example.com'})">share&lt;/button>
 </pre>
 </div>
-<hr>
+
 
 
 </body>
