--- a/api.html
+++ b/api.html
@@ -7,6 +7,7 @@
 <style>
     html,body{
         line-height: 1.5;
+        font-family: sans-serif;
     }
     h1,h2,h3,h4,h5{font-weight: normal; margin:2vh 0px 0px; border-top: 1.5px solid grey;}
     h1::before{
@@ -28,6 +29,7 @@
         /* border: 1.5px grey solid; */
         background-color: lightgray;
         margin: 0px;
+        overflow-y: hidden;
     }
     /* pre::before{
         content: "HTML";
